kubemigrate/land-migrate.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: landing
spec:
  finalizers:
  - kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: landing
  name: landing
  namespace: landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: landing
    spec:
      serviceAccountName: kubecred
      containers:
      - image: registry.ocp4.example.com:8443/developer/redhat-landing
        name: redhat-landing
        ports:
        - containerPort: 80
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: landing
spec:
  ports:
    - port:
      protocol: TCP
      targetPort: 80
  selector:
    app: landing
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing
  namespace: landing
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 8080
